[gd_scene load_steps=5 format=3 uid="uid://gfoxe3rnjqfn"]

[ext_resource type="Script" uid="uid://b1pdonsknwj87" path="res://script/level_select.gd" id="1_apu6u"]
[ext_resource type="Texture2D" uid="uid://dhbw4qa68pleg" path="res://assets/Menu/GameComplete.png" id="1_vomi7"]
[ext_resource type="FontFile" uid="uid://bowetpmlda58l" path="res://font/JS Wansika Italic.ttf" id="3_apu6u"]
[ext_resource type="AudioStream" uid="uid://c61le5kljvqoy" path="res://Sound/Click.MP3" id="4_bv7n5"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apu6u")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.273873, 0.273873, 0.273873, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vomi7")

[node name="Head" type="Label" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 45.0
offset_right = 654.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 80
text = "เลือกด่าน"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 478.0
offset_top = 163.0
offset_right = 598.0
offset_bottom = 454.0

[node name="Button_Level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 35
text = "ด่านที่ 1"

[node name="Button_Level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 35
text = "ด่านที่ 2"

[node name="Button_Level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 35
text = "ด่านที่ 3"

[node name="Button_Level4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 35
text = "ด่านที่ 4"

[node name="Button_Level5" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 35
text = "ด่านที่ 5"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 496.0
offset_right = 622.0
offset_bottom = 551.0
theme_override_fonts/font = ExtResource("3_apu6u")
theme_override_font_sizes/font_size = 35
text = "กลับสู่เมนูหลัก"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bv7n5")
volume_db = 10.0

[connection signal="pressed" from="VBoxContainer/Button_Level1" to="." method="_on_Button_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Level2" to="." method="_on_Button_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Level3" to="." method="_on_Button_Level3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Level4" to="." method="_on_Button_Level4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Level5" to="." method="_on_Button_Level5_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
